Run  gradle reWriteRun